2009-01-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c:
	(hildon_picker_button_selector_selection_changed): Use
	GTK_WIDGET_VISIBLE instead of gtk_window_is_active() to check whether
	the dialog is present.

	Fixes: NB#96202 (FKB causes HildonPickerButton's value update before
	the selection is accepted in the dialog)

2009-01-13  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-color-chooser.h
	* src/hildon-color-chooser-dialog.h:
	Added G_BEGIN_DECLS and G_END_DECLS

2009-01-13  Claudio Saavedra  <csaavedra@igalia.com>

	(_clean_current_selection): plug a leak in the list.

2009-01-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.c:
	(+free_path_list): Method to free a GList of GtkTreePaths.
	(_clean_current_selection), (_save_current_selection),
	(_restore_current_selection): Save the current selection in
	as a list of lists, to support multiple selection properly.

2009-01-12  Alberto Garcia  <agarcia@igalia.com>

	patch by Claudio Saavedra (csaavedra@igalia.com)

	* src/hildon-text-view.c: (+hildon_text_view_button_press_event):
	Store the press position.
	(+hildon_text_view_button_release_event): If the release position is
	close enough to the press position, move the cursor here. Otherwise,
	ignore.
	(hildon_text_view_class_init): Override GtkTextView press, release, and
	motion event handlers, disabling this way text selection through
	pointer interaction, and allowing the container widget to handle the
	motion event.

	Fixes: NB#95828 (HildonTextView functionality)

2009-01-12  Alberto Garcia  <agarcia@igalia.com>

	Based on a patch by Iván Gómez (igomez@igalia.com)

	* src/hildon-button.[ch]
	* src/hildon-calendar.c
	* src/hildon-check-button.c
	* src/hildon-date-editor.c
	* src/hildon-date-selector.c
	* src/hildon-picker-button.c
	* src/hildon-time-editor.c
	* src/hildon-time-selector.c
	* src/hildon-touch-selector.[ch]:
	Documentation updates

2009-01-12  Alejandro G. Castro  <alex@igalia.com>
